# Vouch

./: .dockerignore  .env  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fixtures.json
public/: asset-manifest.json  index.html
public/static/js/: 2.82a45583.chunk.js  3.fe46758b.chunk.js  3.fe46758b.chunk.js.map  main.1a558162.chunk.js  main.1a558162.chunk.js.map  runtime-main.924189c3.js  runtime-main.924189c3.js.map
src/: graphql.rs  main.rs
src/graphql/: application.rs  error.rs  group.rs  mutation_root.rs  organization.rs  query_root.rs  routes.rs  user.rs
src/graphql/application/: interface.rs  schema.rs
src/graphql/group/: interface.rs  schema.rs
src/graphql/organization/: interface.rs  schema.rs
src/graphql/user/: interface.rs  schema.rs
vouch-admin/: .eslintcache  package.json
vouch-admin/src/app/: App.tsx  config.ts
vouch-admin/src/app/components/Application/: ApplicationList.tsx  CreateApplication.tsx  index.tsx
vouch-admin/src/app/components/Dashboard/: Dashboard.tsx
vouch-admin/src/app/components/Group/: CreateGroup.tsx  Table.tsx  (+3 more)
vouch-admin/src/app/gql/: application.ts  group.ts  organization.ts  user.ts
vouch-admin/src/app/helpers/: CopyToClipboard.tsx  Date.tsx  queryParams.ts
vouch-admin/src/app/service/: application.ts  group.ts  index.ts  organization.ts  user.ts
vouch-admin/src/app/typings/: Organization.ts  application.ts  group.ts  index.ts  schema.ts  user.ts
vouch_cli/: Cargo.toml
vouch_cli/src/: main.rs
vouch_lib/: Cargo.toml
vouch_lib/src/: application.rs  auth.rs  db.rs  error.rs  group.rs  lib.rs  organization.rs  user.rs
vouch_lib/src/auth/: session.rs
vouch_lib/src/user/: validators.rs
(+16 files in other folders)
