[package]
name = "vouch"
version = "0.1.0"
authors = ["anitnilay"]
edition = "2018"
default-run = "vouch"

[[bin]]
name = "vouch-cli"
path = "./vouch-cli/src/main.rs"

[dependencies]
vouch_lib = { path = "vouch_lib", version = "0.1.0" }
actix-web = "3.3.2"
actix-rt = "1.1.1"
env_logger = "0.8.2"
dotenv = "0.15.0"
async-graphql = "2.4.7"
async-graphql-actix-web = "2.4.6"
serde = "1.0"
serde_json = "1.0"
actix-cors = "0.5.4"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
actix-identity = "0.3.1"
actix-files = "0.5.0"
time = "0.2.26"

[workspace]
members = [
    ".",
    "vouch_lib",
    "vouch_cli",
]
