[package]
name = "vouch_lib"
version = "0.1.0"
authors = ["anitnilay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
derive_more = "0.99.11"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0"
futures = "0.3.9"
chrono = { version = "0.4.19", features = ["serde"] }
rust-argon2 = "0.8"
jsonwebtoken = "7"
regex = "1"
beatrix = { git = "https://github.com/sha-el/beatrix" }

[dev-dependencies]
tokio = "*"
serial_test = "*"
